--- a/mmoda_tab_generator/templates/euclid/mmoda_euclid.css
+++ b/mmoda_tab_generator/templates/euclid/mmoda_euclid.css
@@ -10,3 +10,10 @@
   padding-left: 6px;
   width: 90% !important;
 }
+
+.euclid-instruments-filters.fits-file-container {
+  float: none;
+  margin-left: 0px;
+  padding-left: 0px;
+  margin-bottom: 15px !important;
+}
