--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -57,16 +57,6 @@ function _mmoda_euclid_read_filters_file($filename, &$filters)
 drupal_add_js(drupal_get_path('module', 'mmoda_photoz_euclid') . '/js/fits-reader/dist/fits-reader/fits-reader.js');
 drupal_add_js(drupal_get_path('module', 'mmoda_photoz_euclid') . '/js/mmoda_euclid.js');
 
-$form['{{ filters_par_name }}_fits_file'] = array(
-  '#type' => 'file',
-  '#title' => t('Upload a fits file',),
-  '#description' => t('Upload a fits file'),
-  '#parent_classes' => array(
-    'euclid-instruments-filters fits-file-container'
-  ),
-  '#prefix' => '<hr><label class="control-label">Filters</label>',
-);
-
 $instruments_filters = array();
 foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filters) {
   if (! array_key_exists($instrument, $instruments_filters))
@@ -76,6 +66,59 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
   }
 }
 
+$form['{{ filters_par_name }}_fits_file'] = array(
+  '#type' => 'file',
+  '#title' => t('Upload a fits file',),
+  '#description' => t('Upload a fits file'),
+  '#parent_classes' => array(
+    'euclid-instruments-filters fits-file-container'
+  ),
+  '#prefix' => '<hr>',
+);
+
+$form['{{ filters_par_name }}_fits'] = array(
+  '#type' => 'container',
+  '#title' => t('Filters from fits file'),
+  '#attributes' => array(
+    'class' => array(
+      'euclid-instruments-filters multivalued-field'
+    )
+  ),
+  '#suffix' => '<hr><label class="control-label">Filters loaded from fits file</label>'
+);
+
+$form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[filter][]'] = array(
+  '#type' => 'select',
+  '#title' => t('Filter'),
+  '#required' => TRUE,
+  '#options' => $instruments_filters,
+  '#parent_classes' => array(
+    'col-md-4'
+  ),
+  '#prefix' => '<label class="control-label">List of filters</label>' . '<div class="row form-group multivalued-value">'
+);
+$form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux][]'] = array(
+  '#type' => 'select',
+  '#title' => t('Flux column name'),
+  '#required' => TRUE,
+  '#options' => array(),
+  '#parent_classes' => array(
+    'col-md-3 '
+  )
+);
+$form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux_error][]'] = array(
+  '#type' => 'select',
+  '#title' => t('Flux error column name'),
+  '#required' => TRUE,
+  '#options' => array(),
+  '#parent_classes' => array(
+    'col-md-3'
+  ),
+  '#suffix' => '</div>'
+);
+
+
+
 $form['{{ filters_par_name }}'] = array(
   '#type' => 'container',
   '#title' => t('Filters'),
@@ -84,7 +127,7 @@ $form['{{ filters_par_name }}'] = array(
       'euclid-instruments-filters multivalued-field'
     )
   ),
-  '#suffix' => '<hr>'
+  '#suffix' => '<hr><label class="control-label">Filters</label>'
 );
 
 $form['{{ filters_par_name }}']['{{ filters_par_name }}[filter][]'] = array(
