--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -153,7 +153,7 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
           'euclid-instruments-filters multivalued-field'
         )
       ),
-      '#suffix' => '<hr><label class="control-label">Filters</label>'
+      '#suffix' => '<hr>'
     );
 
     $form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[filter][]'] = array(
@@ -188,7 +188,7 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
 
 
 {# for the user input filters #}
-
+{#
 $form['{{ filters_par_name }}'] = array(
   '#type' => 'container',
   '#title' => t('Filters'),
@@ -227,7 +227,7 @@ $form['{{ filters_par_name }}']['{{ filters_par_name }}[flux_error][]'] = array(
   ),
   '#suffix' => '</div>'
 );
-
+#}
 drupal_add_js(array(
     'euclid-filters' => $instrument_defaults['{{ filters_par_name }}']
   ), 'setting');
