--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -67,20 +67,20 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
 }
 
 {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
-$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}_fits'] = array(
+$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}'] = array(
 {% else %}
-$form['{{ filters_par_name }}_fits'] = array(
+$form['{{ filters_par_name }}'] = array(
 {% endif %}
   '#type' => 'container',
   '#title' => t('Filters from fits file'),
   '#states' => array(
       'visible' => array(
-            ':input[name="' . $mform_id . '{{ filters_par_name }}_fits_type"]' => array(
+            ':input[name="' . $mform_id . '{{ filters_par_name }}_type"]' => array(
               array('value' => 'file'), 'or', array('value' => 'url')
             )
         ),
         'enabled' => array(
-            ':input[name="' . $mform_id . '{{ filters_par_name }}_fits_type"]' => array(
+            ':input[name="' . $mform_id . '{{ filters_par_name }}_type"]' => array(
               array('value' => 'url'), 'or', array('value' => 'file')
             )
         )
@@ -96,9 +96,9 @@ $form['{{ filters_par_name }}_fits'] = array(
 );
 
 {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
-$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[filter][]'] = array(
+$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}']['{{ filters_par_name }}[filter][]'] = array(
 {% else %}
-$form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[filter][]'] = array(
+$form['{{ filters_par_name }}']['{{ filters_par_name }}[filter][]'] = array(
 {% endif %}
   '#type' => 'select',
   '#title' => t('Filter'),
@@ -112,9 +112,9 @@ $form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[filter][]'] = 
   '#prefix' => '<label></label>' .'<div class="row form-group multivalued-value">'
 );
 {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
-$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux][]'] = array(
+$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}']['{{ filters_par_name }}[flux][]'] = array(
 {% else %}
-$form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux][]'] = array(
+$form['{{ filters_par_name }}']['{{ filters_par_name }}[flux][]'] = array(
 {% endif %}
   '#type' => 'select',
   '#title' => t('Flux column name'),
@@ -125,9 +125,9 @@ $form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux][]'] = ar
   )
 );
 {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
-$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux_error][]'] = array(
+$form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}']['{{ filters_par_name }}[flux_error][]'] = array(
 {% else %}
-$form['{{ filters_par_name }}_fits']['{{ filters_par_name }}_fits[flux_error][]'] = array(
+$form['{{ filters_par_name }}']['{{ filters_par_name }}[flux_error][]'] = array(
 {% endif %}
   '#type' => 'select',
   '#title' => t('Flux error column name'),
