--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -54,7 +54,7 @@ function _mmoda_euclid_read_filters_file($filename, &$filters)
 {# TODO: prefix-suffix, visibility etc #}
 {% macro euclid_form_field(filters_par_name, par_detail) -%}
 
-drupal_add_js(drupal_get_path('module', 'mmoda_photoz_euclid') . '/js/fits-reader/dist/fits-reader/fits-reader.js');
+drupal_add_js('https://unpkg.com/fits-reader-js@1.0.0/fits-reader.js');
 drupal_add_js(drupal_get_path('module', 'mmoda_photoz_euclid') . '/js/mmoda_euclid.js');
 
 $instruments_filters = array();
