--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -89,7 +89,8 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
         'euclid-instruments-filters',
          'multivalued-field',
          'col-md-12'
-      )
+      ),
+      'param_name' => '{{ filters_par_name }}'
     ),
     '#suffix' => {% if 'extra_metadata' not in par_detail or 'group' not in par_detail['extra_metadata'] %}'<hr>'{% else %}''{% endif %}
   );
