--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -86,8 +86,7 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
         'euclid-instruments-filters',
          'multivalued-field',
          'col-md-12'
-      ),
-      'multivalued_field_param_name' => '{{ filters_par_name }}'
+      )
     ),
     '#suffix' => {% if 'extra_metadata' not in par_detail or 'group' not in par_detail['extra_metadata'] %}'<hr>'{% else %}''{% endif %}
   );
@@ -105,6 +104,9 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
       'col-md-4',
       'instrument-filters'
     ),
+    '#attributes' => array(
+      'multivalued_field_param_name' => '{{ filters_par_name }}'
+    ),
     # TODO not clear why, but by removing the label tag, the labels of the filters drop-down menus disappear
     '#prefix' => '<label></label>' .'<div class="row form-group multivalued-value">'
   );
@@ -119,7 +121,10 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
     '#options' => array(),
     '#parent_classes' => array(
       'col-md-3 '
-    )
+    ),
+    '#attributes' => array(
+      'multivalued_field_param_name' => '{{ filters_par_name }}'
+    ),
   );
   {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
   $form['{{ par_detail['extra_metadata']['group'] | snake_case }}']['{{ filters_par_name }}_{{ product_name }}']['{{ filters_par_name }}_{{ product_name }}[flux_error][]'] = array(
@@ -132,6 +137,9 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
     '#options' => array(),
     '#parent_classes' => array(
       'col-md-3'
+    ),
+    '#attributes' => array(
+      'multivalued_field_param_name' => '{{ filters_par_name }}'
     ),
     '#suffix' => '</div>'
   );
