--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -88,7 +88,8 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
          'col-md-12'
       )
     ),
-    '#suffix' => {% if 'extra_metadata' not in par_detail or 'group' not in par_detail['extra_metadata'] %}'<hr>'{% else %}''{% endif %}
+    '#prefix' => '{% if 'extra_metadata' not in par_detail or 'group' not in par_detail['extra_metadata'] %}<div class="row">{% endif %}',
+    '#suffix' => '{% if 'extra_metadata' not in par_detail or 'group' not in par_detail['extra_metadata'] %}</div><hr>{% endif %}'
   );
 
   {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
