--- a/mmoda_tab_generator/templates/euclid/macros.j2
+++ b/mmoda_tab_generator/templates/euclid/macros.j2
@@ -106,7 +106,8 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
       'instrument-filters'
     ),
     '#attributes' => array(
-      'multivalued_field_param_name' => '{{ filters_par_name }}'
+      'multivalued_field_param_name' => '{{ filters_par_name }}',
+      'multivalued_field_product_name' => '{{ product_name }}'
     ),
     # TODO not clear why, but by removing the label tag, the labels of the filters drop-down menus disappear
     '#prefix' => '<label></label>' .'<div class="row form-group multivalued-value">'
@@ -124,7 +125,8 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
       'col-md-3 '
     ),
     '#attributes' => array(
-      'multivalued_field_param_name' => '{{ filters_par_name }}'
+      'multivalued_field_param_name' => '{{ filters_par_name }}',
+      'multivalued_field_product_name' => '{{ product_name }}'
     ),
   );
   {% if 'extra_metadata' in par_detail and 'group' in par_detail['extra_metadata'] %}
@@ -140,7 +142,8 @@ foreach ($instrument_defaults['{{ filters_par_name }}'] as $instrument => $filte
       'col-md-3'
     ),
     '#attributes' => array(
-      'multivalued_field_param_name' => '{{ filters_par_name }}'
+      'multivalued_field_param_name' => '{{ filters_par_name }}',
+      'multivalued_field_product_name' => '{{ product_name }}'
     ),
     '#suffix' => '</div>'
   );
